* BUG#7332 Reset billing information direct debit data when changing a subscriber
* FEA#7024 Configure default reports templates to be added as default letters in coog
* BUG#6505 It is now possible to update the SEPA mandate on the invoice from the payment informations modification wizard
* BUG#6607 No mandate update on non-direct debit invoices
* OTH#0000 Fix tests of payment suspensions
* OTH#0000 Update on_change_product depends
* BUG#6451 Add default payer during subscription

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* FEA#0000 Add payment reject test scenario

Version 1.3 - 2015-01-22
* FEA#0000 Automatically init sepa mandate

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation